# TSP-Drone

./: 100_1.txt  100_1V2.txt  100_2.txt  100_2V2.txt  100_3V2.txt  30_1.txt  30_1V2.txt  30_2.txt  30_2V2.txt  30_3V2.txt  50_1.txt  50_2.txt  50_2V2.txt  50_V2.txt  80_1.txt  80_1V2.txt  80_2.txt  80_2V2.txt  80_3V2.txt  CMakeLists.txt  README.md  TSPDBasicHeuristicCase1.py  TSPDBasicHeuristicCase2.py  TSPDData.py  TSPDModelCase1.py  TSPDModelSPCas1.py  TSPDSolution.py  TSPModel.py  TSPModelSPCas2.py  aideFromC++ToPython.txt  draw_solution.py  get_tsp.py  graph.html  init.txt  initV2.txt  initV3.txt  init_3V2.txt  init_val_tsp.txt  main.py  results_tsp_100.txt  (+8 more)
Data/100/: Demand.txt
Data/30/: Demand.txt
Data/50/: Demand.txt
Data/80/: Demand.txt
Data/test/: Demand.txt  Graph.txt
Includes/: Utils.hpp
Includes/Graph/: Demand.hpp  Edge.hpp  Graph.hpp  Position.hpp  Vertex.hpp
Mains/: StructureTest.cpp  main.cpp  simpleTest.cpp  structureTest.cpp  toCheck.cpp
Src/: Utils.cpp
Src/Graph/: Demand.cpp  Edge.cpp  Graph.cpp  Position.cpp  Vertex.cpp
include/: ConstructiveSolve.hpp  Event.hpp  Heur_Cas1_leP.hpp  Instance.hpp  Mod1V1.hpp  Parser.hpp  Preview.hpp  Solution.hpp  SolveurTSPMTZ.hpp  Utils.hpp  parser.hpp  utils.hpp
include/Graph/: Demand.hpp  Edge.hpp  Graph.hpp  GraphPreview.hpp  Position.hpp  Vertex.hpp
include/Solution/: Solution.hpp  SolutionConverter.hpp  SolutionParser.hpp  SolutionPreview.hpp  preview.hpp
python/: TSPCompactModel.py  TSPDData.py  TSPDMIPModel.py  draw_graph.py  heur_short_path.py  heuristic_cas2.py  main.py  main_cas2.py  main_tsp.py  test.py  usefull_fonctions.py
python_propre/: TSPDData.py  TSPDEvent.py  TSPDModelCase2.py  TSPDModelSPCas1.py  TSPDModelSPCas1V2.py  TSPDModelSPCas1V3.py  TSPDSolution.py  TSPModel.py  aideFromC++ToPython.txt
results/: 100.html  30.html  30_1.txt  30_1.txt.txt  50.html  80.html  ConstructiveSol100.txt  ConstructiveSol30.txt  ConstructiveSol50.txt  ConstructiveSol80.txt  ConstructiveSolInit.txt  graph.html  results_tsp_100.txt  results_tsp_30.txt  results_tsp_80.txt  results_tsp_init.txt  results_tsp_test.txt  sol.txt  solTSP100.txt  solTSP30.txt  solTSP50.txt  solTSP80.txt  solTSPinit.txt
src/: ConstructiveSolve.cpp  Event.cpp  Heur_Cas1_leP.cpp  Instance.cpp  Mod1V1.cpp  Parser.cpp  Preview.cpp  Solution.cpp  SolveurTSPMTZ.cpp  Utils.cpp  parser.cpp  utils.cpp
src/Graph/: Demand.cpp  Edge.cpp  Graph.cpp  GraphPreview.cpp  Position.cpp  Vertex.cpp
src/Solution/: Solution.cpp  SolutionConverter.cpp  SolutionParser.cpp  SolutionPreview.cpp  (+1 more)
